applet/pager: Divide window size by devicePixelRatio on X11

KWindowInfoPrivateX11::frameGeometry() returns the true geometry of
a window, so dividing the window size and coordinates by devicePixelRatio
is needed to get the correct size.

BUG: 446627